--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,15 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>us.monoid.web</groupId>
+    	<artifactId>resty</artifactId>
+    	<version>0.3.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.3.3</version>
+    </dependency>
   </dependencies>
 </project>
