--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,59 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.clarify.api</groupId>
-  <artifactId>clarify-api-sdk</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>io.clarify.api</groupId>
+    <artifactId>clarify-api-sdk</artifactId>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
 
-  <name>clarify-api-sdk</name>
-  <url>http://maven.apache.org</url>
+    <name>Clarify API SDK</name>
+    <description>The clarify-java library allows you to use the Clarify API from within Java. It handles all of the HTTP requests and response codes for you.</description>
+    <url>https://github.com/Clarify/clarify-java</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>us.monoid.web</groupId>
-    	<artifactId>resty</artifactId>
-    	<version>0.3.2</version>
-    </dependency>
-  </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>us.monoid.web</groupId>
+            <artifactId>resty</artifactId>
+            <version>0.3.2</version>
+        </dependency>
+    </dependencies>
+
+    <developers>
+        <developer>
+            <name>James Higginbotham</name>
+            <email>james@launchany.com</email>
+            <organization>Blue Jazz Consulting</organization>
+            <organizationUrl>http://launchany.com/</organizationUrl>
+        </developer>
+        <developer>
+            <name>Keith Casey</name>
+            <email>keith@clarify.io</email>
+            <organization>Clarify Inc</organization>
+            <organizationUrl>http://clarify.io</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:Clarify/clarify-java.git</connection>
+        <developerConnection>scm:git:git@github.com:Clarify/clarify-java.git</developerConnection>
+        <url>git@github.com:Clarify/clarify-java.git</url>
+    </scm>
 </project>
