updating the docs to be helpful next time

--- a/pom.xml
+++ b/pom.xml
@@ -126,4 +126,8 @@
 			</build>
 		</profile>
 	</profiles>
+	<organization>
+		<name>Clarify Inc</name>
+		<url>http://Clarify.io</url>
+	</organization>
 </project>
