--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>io.clarify.api</groupId>
     <artifactId>clarify-api-sdk</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Clarify API SDK</name>
@@ -54,7 +54,8 @@
         <connection>scm:git:git@github.com:Clarify/clarify-java.git</connection>
         <developerConnection>scm:git:git@github.com:Clarify/clarify-java.git</developerConnection>
         <url>git@github.com:Clarify/clarify-java.git</url>
-    </scm>
+      <tag>clarify-api-sdk-1.0.0</tag>
+  </scm>
 
 	<build>
 		<plugins>
